Refactored master server client code to be much more flexible and support authing against multiple domains. Fixed issue in txENet where multiple events weren't being processed each time Twisted detected that data was available.

--- a/data/config.json
+++ b/data/config.json
@@ -43,5 +43,6 @@
         }
     },
     "permissions": "file://permissions.json",
+    "master_servers": "file://master_servers.json",
     "carbon_metrics": "file://carbon_metrics.json"
 }
