Added all the maps that the default server has in its map rotation to the map rotations. Added configurable max_duplicate_peers attribute. Fixed auth message to get broadcast to the entire room and to include info about the auth event.

--- a/src/spyd/data/config.json
+++ b/src/spyd/data/config.json
@@ -36,5 +36,6 @@
     "permissions": "file://permissions.json",
     "master_servers": "file://master_servers.json",
     "gep_endpoints": "file://gep_endpoints.json",
-    "carbon_metrics": "file://carbon_metrics.json"
+    "carbon_metrics": "file://carbon_metrics.json",
+    "max_duplicate_peers": 10
 }
