Added cube2common cube2protocol and cube2demo dependencies to requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ twisted
 python-Levenshtein
 simplejson
 simple_json
+-e git+git://github.com/fdChasm/pycube2common
+-e git+git://github.com/fdChasm/pycube2protocol
+-e git+git://github.com/fdChasm/pycube2demo
