Fixing dependencies in requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ simple_json
 pycube2crypto
 txCarbonClient
 txCascil
+-e git+git://github.com/fdChasm/pyenet#egg=pyenet-0.1.0
 -e git+git://github.com/fdChasm/pycube2common#egg=pycube2common-0.1.0
 -e git+git://github.com/fdChasm/pycube2protocol#egg=pycube2protocol-0.1.0
 -e git+git://github.com/fdChasm/pycube2demo#egg=pycube2demo-0.1.0
