--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
   - "pip install cython"
   - "pip install -r requirements.txt"
 script:
-    export PYTHONPATH=$(pwd)/src
-    nosetests -w ./tests --with-coverage --cover-package="spyd,txENet,cube2map"
+  - "export PYTHONPATH=$(pwd)/src"
+  - "nosetests -w ./tests --with-coverage --cover-package='spyd,txENet,cube2map'"
 
