--- a/src/spyd/data/config.json
+++ b/src/spyd/data/config.json
@@ -2,6 +2,7 @@
     "server_name": "Spyd Server",
     "server_info": "This server runs Spyd. Use {orange}#commands{white} to see available commands. See {blue}https://github.com/fdChasm/spyd{white} for more info.",
     "packages_directory": "/opt/sauerbraten/packages",
+    "connect_auth_domain": "",
     "default_room": "lobby",
     "room_bindings": {
         "bored": {
