Add workaround to allow Wahn/Wonder client to correctly read stats despite which room clients are in. Add a few tests for spyd.game.room.RoomManager.

--- a/src/spyd/data/config.json
+++ b/src/spyd/data/config.json
@@ -26,7 +26,8 @@
     "lan_findable": true,
     "ext_info": {
         "enabled": true,
-        "send_ips": true
+        "send_ips": true,
+        "wc_room_workaround": true
     },
     "room_types": {
         "default": {
