--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
-branch = True
+branch = False
 omit = *cube2common*, *cube2protocol*, *cube2demo*, *twisted*, *txCarbonClient*, *uuid*, *zope/interface*, *simplejson*, *contextlib*, *ctypes*, *decimal*, *encodings*, *mock*, *numbers*, */json/__init__.py, *json/decoder*, *json/encoder*, *json/scanner*, *pty.py, *tty.py
